Some edits to the todo list and some fixes when already possible
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/machine-learning/apprentissage.tex
+++ b/shared/latex/machine-learning/apprentissage.tex
@@ -25,7 +25,7 @@
   \frametitle{Cross-validation}
   Pour \og perdre\fg{} moins de données et mieux tester la
   généralisation :
-  \V{["cv", "tw", 0.9] | image}
+  \V{["k-fold-cross-validation", "tw", 0.9] | image}
   Ici, 4-fold cross-validation.
 \end{frame}
 
