maj image droits

--- a/shared/latex/actors/gafa.tex
+++ b/shared/latex/actors/gafa.tex
@@ -26,8 +26,13 @@
 
 \begin{frame}
   \frametitle{Les acteurs business du machine learning}
-  Acteurs de la recherche en machine learning
-  \V{["acquisition-gafa", "th", 0.8] | image}
+  Course à l'acquisition :
+  \begin{itemize}
+    \item Google (Cleversense (2012), Deepmind, Api.ai,...)
+    \item Apple (Siri (2010), Vocal IQ, RealFace, ...) 
+    \item Facebook (Face.com (2012), wit.ai, ...)
+    \item Microsoft (Netbreeze (2013), Swiftkey, Maluuba)
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
