--- a/shared/latex/neural-networks/cnn-data.tex
+++ b/shared/latex/neural-networks/cnn-data.tex
@@ -14,7 +14,12 @@
 \end{frame}
 
 \begin{frame}{ImageNet}
-  ~12M images annotés par synset de wordnet
+  Images annotés par synset de wordnet :
+  \begin{itemize}
+    \item 20k synsets non-vides (objectif 100k)
+    \item 14M images (objectif 100M)
+    \item dont 1M sont annotées
+  \end{itemize}
   \V{["imagenet", "th", 0.7] | image}
 \end{frame}
 
