--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -5,9 +5,13 @@
 \end{frame}
 
 \begin{frame}{Détection de mensonges à la frontière}
-  Projet pilote en Hongrie, Lettonie et Grèce (iBorderCtrl).
-
-  \V{["airport-lie-detection", "tw", 0.8] | image}
+  Projet pilote (2017) en Hongrie, Lettonie et Grèce (iBorderCtrl) :
+  \begin{itemize}
+    \item Vérification biometrique
+    \item Détection automatique de mensonge
+    \item Authentification de document 
+    \item évaluation de risque
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Caméras de vidéo-surveillance}
@@ -38,8 +42,13 @@
   \V{["gay-or-not", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Évaluer une Baby-sitter en fonction de son activité en ligne?}
-  \V{["baby-sitter-reliable", "tw", 0.8] | image}
+\begin{frame}{Predictim}
+  Évaluer une Baby-sitter en fonction de son activité en ligne?
+  \begin{itemize}
+    \item projet en 2018
+    \item utilisation des données de facebook, twitter,... pour noter les gens
+    \item Blocage aux api Twitter puis Facebook après le "badbuzz"
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Traque de la Chine de ses musulmans du Xinjiang}
