--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -55,7 +55,12 @@
 
 \begin{frame}{Acceptation}
   Utilisateurs prêts à accepter un algorithme qui fait des erreurs ?
-  \V{["robotdoc", "th", 0.7] | image}
+  Xiaoyi, le docteur chinois :
+  \begin{itemize}
+    \item est un robot
+    \item décroche l'examen de médecine en 2017
+    \item système d’assistance au diagnostic testé en centre de santé
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Acceptation}
