--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -71,7 +71,7 @@
 \end{frame}
 
 \begin{frame}{Exemple --- Apprentissage par renforcement}
-  \V{["alphazero", "tw", 0.8] | image}
+  \V{["car-dashboard", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Topologie du domaine}
