--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -10,13 +10,36 @@
 
 \begin{frame}
   \frametitle{Médecine et machine learning}
-  \V{["esante-landscape", "tw", 0.9] | image}
+  Cabinet Frost & Sullivan :
+  \begin{itemize}
+    \item \$90 milliards pour le marché de la santé numérique en 2019
+    \item \$234,5 milliards d’ici 2023
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{Diagnostique}
-  Analyse d'image, d'ECG, données génomiques et phénotypiques
-  \V{["esante-solutions", "tw", 0.8] | image}
+  Des données :
+  \begin{itemize}
+    \item Images (multispectrales)
+    \item ECG
+    \item Données génomiques 
+    \item Données phénotypiques
+  \end{itemize}
+\end{frame}
+Nouveaux usages : smartphone, bracelets connectés, ...
+
+\begin{frame}
+  \frametitle{Diagnostique}
+  Des pathologies :
+  \begin{itemize}
+    \item du coeur
+    \item neurologiques
+    \item ophtalimiques
+    \item Rhumatologiques
+    \item Cancers
+    \item ...
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -117,14 +140,12 @@
 
 \begin{frame}
   \frametitle{Thérapie}
-  Robo-chirurgien (Smart Tissue Autonomous Robot)
-  \V{["robot-chirurgien", "th", 0.8] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Thérapie}
-  Mécanisme de contrôle de prothèses bioniques
-  \V{["bras-bioniques", "tw", 0.8] | image}
+  Robo-chirurgien Smart Tissue Autonomous Robot (STAR)
+  \begin{itemize}
+    \item Sutures automatiques en 2014
+    \item Appendicetomie autonome en 2016
+    \item Meilleure précision que les chirurgiens
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
