update clean image process

--- a/shared/latex/actors/gafa.tex
+++ b/shared/latex/actors/gafa.tex
@@ -37,8 +37,19 @@
 
 \begin{frame}
   \frametitle{Les acteurs business}
-  IBM et Watson
+  IBM, Watson et Jeopardy en 2010
   \V{["jeopardy-watson", "tw", 0.6] | image}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  L'api IBM Watson :
+  \begin{itemize}
+    \item Data : Watson Knowledge Catalog, Watson Discovery
+    \item Traitement de la voix : Tone Analyzer, Speech to Text
+    \item Traitement du texte : Text to Speech, , Language Translator, NLU, NLC
+    \item Machine Learning : Watson Studio, Knowledge Studio, Machine Learning
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -59,45 +70,30 @@
     \item Chatbots préconfigurés
     \end{itemize}
   \end{minipage}\hfill
-  \V{["watson-personality-insight", "tw", 0.75] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
-  APIs Watson :
+  Microsoft Azure : 
   \begin{itemize}
-  \item Reconnaissance d'image
-  \item Machine learning
-  \item Oncologie
-  \item Cybersécurity
-  \item ...
+    \item Voix : Reconnaissance vocale, Synthèse vocale, Traduction vocale, Reconnaissance de l'orateur
+    \item Langage : Analyse de texte, Language Understanding, Lecteur immersif, QnA maker, Traducteur
+    \item Vision : Form Recognizer, Video Indexer, Visage, Vision par ordinateur, Vision personnalisée
+    \item Data : Conseiller Métriques, Content Moderator, Personalizer
   \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
-  IBM et Watson
-  \V{["ibm-watson-struct", "tw", 1] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Microsoft Azure
-  \V{["ms-azure", "tw", 1] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Microsoft Azure
-  \newline
-  (Déc 2018) supporte scikit-learn, PyTorch et TensorFlow
-  \V{["ms-azure2", "tw", 1] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Amazon
-  \V{["amazon-ai", "tw", 0.9] | image}
+  Amazon AI :
+  \begin{itemize}
+    \item Data : AWS, Amazon Mechanical Turk
+    \item Traitement de la voix : Amazon Transcribe, Amazon Polly, 
+    \item Traitement du texte : Amazon Lex, Amazon Comprehend, Amazon Translate, Amazon Textract
+    \item Vision : Amazon Rekognition, AWS Panorama
+    \item Recherche d'information : Amazon Kendra
+    \item Business : Amazon Forecast, Amazon Fraud Detector
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
