--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -16,18 +16,25 @@
 
 \begin{frame}{Caméras de vidéo-surveillance}
   Le fil céleste :
-
-  \begin{itemize}
-  \item 400 Millions de caméras début 2020 
-  \item 600 Millions d'ici la fin 2020
-  \end{itemize}
-
   \begin{minipage}[c]{0.49\linewidth}
-    \V{["chine-orwell", "tw", 1] | image}
-  \end{minipage}\hfill
+    Des caméras dans l'espace public :
+    \begin{itemize}
+      \item 400 Millions début 2020 
+      \item 600 Millions fin 2020 ($\approx$800 Millions dans le monde)
+      \item Objectif 2,7 Milliards en 2022
+      \item 3 Millions à Shangaï
+      \end{itemize}
+    \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \V{["chinese-street-surveillance", "tw", 1] | image}
+    Des caméras pointues :
+    \begin{itemize}
+      \item 500Mega pixels
+      \item Reconnaissance faciale
+      \item Reconnaissance des véhicules
+      \item ...
+    \end{itemize}
   \end{minipage}\hfill
+  Toute information ~captable/prédictable~ est utilisée
 \end{frame}
 
 \begin{frame}{Reconnaissance faciale}
@@ -63,6 +70,12 @@
 \end{frame}
 
 \begin{frame}{Les problèmes éthiques}
-  Deepfake : «~Zao~»
-  \V{["zao-deepfake", "tw", 0.8] | image}
+  Créer des données crédibles : les Deepfake 
+  \begin{itemize}
+    \item Visages
+    \item Son
+    \item Vidéo 
+  \end{itemize}
+  \bluelink{https://www.lemonde.fr/pixels/article/2019/11/24/on-a-essaye-de-fabriquer-un-deepfake-et-on-est-passe-a-autre-chose_6020323_4408996.html}{Source : ~Le Monde~, "Emmanuel Macron est OSS117"}
+  \bluelink{https://www.reuters.com/article/uk-factcheck-trump-consession-video-deep/fact-check-donald-trump-concession-video-not-a-confirmed-deepfake-idUSKBN29G2NL}{Source : ~Reuters~, "Fact check: Donald Trump concession video not a ‘confirmed deepfake’"}
 \end{frame}
