--- a/shared/latex/sectors/coding.tex
+++ b/shared/latex/sectors/coding.tex
@@ -48,14 +48,9 @@
 
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
-  Visual Studio IntelliCode (C\#, C++, XAML, Java, Javascript, Python)
-  \V{["vs-intellicode-2", "tw", 0.8] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Informatique et Machine Learning}
   Et aussi :
   \begin{itemize}
+  \item Visual Studio IntelliCode $\Rightarrow$ Complétion automatique intelligente
   \item Détection de faille de sécurité dans le code
   \item Détection de quasi-duplication de code
   \item Analyse de dépendances
