--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -34,7 +34,18 @@
 \end{frame}
 
 \begin{frame}{Faisabilité}
-  \V{["xkcd-easy-impossible", "th", 0.8] | image}
+  Discussion sur le temps de développement :
+  \begin{itemize}
+    \item Test dans une app si un téléphone est dans un parc national
+    \item Un solver de sudoku
+    \item Savoir si il y a un panneau indicateur sur une photo
+    \item Savoir si il y a un cycliste sur une photo
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Faisabilité}
+  Il est compliqué de faire comprendre la différence entre le facile et le très difficile.
+  $\Rightarrow$ Problèmes de communication dans une équipe.
 \end{frame}
 
 \begin{frame}{Recrutement}
