maj shared/latex/image-instruction.lst

--- a/shared/latex/sectors/coding.tex
+++ b/shared/latex/sectors/coding.tex
@@ -20,7 +20,8 @@
 
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
-  Antivirus 
+  Les antivirus Cylance ou Deepinstinct utilise partiellement ou entièrement des outils de détections à base de Deep Learning
+  
   \newline
   \newline
   \begin{minipage}[c]{0.49\linewidth}
