Put logos in specific dir
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/big-questions/legal.tex
+++ b/shared/latex/big-questions/legal.tex
@@ -1,5 +1,5 @@
 \begin{frame}{CNIL}
-  \V{["cnil-logo", "tw", 0.8] | image}
+  \V{["logos/cnil", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Comité éthique \& intelligence artificielle}
