--- a/shared/latex/python/intro.tex
+++ b/shared/latex/python/intro.tex
@@ -5,7 +5,7 @@
   \item[2001] Passage en GPL
   \item[2009] Python 3
   \end{description}
-  \V{["python_logo", "tw", 0.8] | image}
+  \V{["logos/python", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Caractéristiques}
