--- a/shared/latex/tf-keras/keras.tex
+++ b/shared/latex/tf-keras/keras.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Introduction}
   Keras est une API de haut niveau qui permet de prototyper des réseaux de neurones de toutes sortes.
 
-  \V{["keras-tensorflow-logo", "tw", 0.5] | image}
+  \V{["logos/keras-tensorflow", "tw", 0.5] | image}
 \end{frame}
 
 \begin{frame}{Avantages --- Facile d'utilisation}
