--- a/shared/latex/tf-keras/tf.tex
+++ b/shared/latex/tf-keras/tf.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Introduction}
-  \V{["tensorflow_logo", "th", 0.7] | image}
+  \V{["logos/tensorflow", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Structure de l'API}
