--- a/shared/latex/tools/cloud-computing.tex
+++ b/shared/latex/tools/cloud-computing.tex
@@ -1,15 +1,15 @@
 \begin{frame}
   \frametitle{Cloud Computing}
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["aws-logo", "tw", 0.4] | image}
+    \V{["logos/aws", "tw", 0.4] | image}
     \small{$\;$} \\
-    \V{["gcloud-logo", "tw", 0.7] | image}
+    \V{["logos/gcloud", "tw", 0.7] | image}
     \small{$\;$} \\
-    \V{["ibm-logo", "tw", 0.4] | image}
+    \V{["logos/ibm", "tw", 0.4] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["azure-logo", "tw", 0.5] | image}
-    \V{["ovh-logo", "tw", 0.5] | image}
-    \V{["citrix-logo", "tw", 0.5] | image}
+    \V{["logos/azure", "tw", 0.5] | image}
+    \V{["logos/ovh", "tw", 0.5] | image}
+    \V{["logos/citrix", "tw", 0.5] | image}
   \end{minipage}\hfill
 \end{frame}
