--- a/shared/latex/tools/kaggle.tex
+++ b/shared/latex/tools/kaggle.tex
@@ -1,5 +1,5 @@
 \begin{frame}
   \frametitle{Kaggle}
   Site d'hébergement de compétitions de Machine Learning.
-  \V{["kaggle-logo", "tw", 0.5] | image}  
+  \V{["logos/kaggle", "tw", 0.5] | image}  
 \end{frame}
