--- a/shared/latex/tools/notebooks.tex
+++ b/shared/latex/tools/notebooks.tex
@@ -4,7 +4,7 @@
 
   Plus de 40 langages de programmation supportés, dont Python.
 
-  \V{["jupyter_logo", "th", 0.5] | image}
+  \V{["logos/jupyter", "th", 0.5] | image}
 \end{frame}
 
 \begin{frame}
