--- a/shared/latex/recommander-system/intro.tex
+++ b/shared/latex/recommander-system/intro.tex
@@ -8,13 +8,13 @@
 \begin{frame}
   \frametitle{Exemples}
   \begin{minipage}[l]{0.33\linewidth}
-    \V{["google-ads_logo", "tw", 1] | image}
+    \V{["logos/google-ads", "tw", 1] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.33\linewidth}
-    \V{["amazon_logo", "tw", 1] | image}
+    \V{["logos/amazon", "tw", 1] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.33\linewidth}
-    \V{["netflix_logo", "tw", 1] | image}
+    \V{["logos/netflix", "tw", 1] | image}
   \end{minipage}\hfill
 \end{frame}
 
