--- a/shared/latex/tools/arXiv.tex
+++ b/shared/latex/tools/arXiv.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{arXiv}
-  \V{["arxiv_logo", "tw", 0.9] | image}
+  \V{["logos/arxiv", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
