--- a/shared/latex/tools/github.tex
+++ b/shared/latex/tools/github.tex
@@ -1,5 +1,5 @@
 \begin{frame}
   \frametitle{Github}
   Sité d'hébergement et diffusion de code source.
-  \V{["github_logo", "tw", 0.5] | image}
+  \V{["logos/github", "tw", 0.5] | image}
 \end{frame}
