Use new deckz and correct faulty sections
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/sectors/coding.tex
+++ b/shared/latex/sectors/coding.tex
@@ -1,29 +1,23 @@
-\begin{frame}
-  \frametitle{Informatique et Machine Learning}
+\begin{frame}{Informatique et Machine Learning}
   La mutation du secteur informatique par l'intelligence artificielle
   \V{["it-ai", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Informatique et Machine Learning}
+\begin{frame}{Informatique et Machine Learning}
   DeepMind réduit de 40\% la consommation des datacenter Google
   \V{["deepmind-energy-consumption", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Informatique et Machine Learning}
+\begin{frame}{Informatique et Machine Learning}
   2018 était l'année du Machine Learning en cybersécurité (Mc Afee)
-  \newline
+
   Outils ML en cybersécurité : 10\% à 60\% en 2020 (Gartner)
   \V{["Machine-Learning-Cybersécurité", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Informatique et Machine Learning}
+\begin{frame}{Informatique et Machine Learning}
   Les antivirus Cylance ou Deepinstinct utilise partiellement ou entièrement des outils de détections à base de Deep Learning
-  
-  \newline
-  \newline
+
   \begin{minipage}[c]{0.49\linewidth}
     \V{["cylance", "tw", 0.8] | image}
   \end{minipage}\hfill
@@ -32,13 +26,11 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Informatique et Machine Learning}
+\begin{frame}{Informatique et Machine Learning}
   Windows defender \textbf{Vs} Bad Rabbit (2017)
-  \newline
+
   Patché après 10 infections et 14 minutes d'attaque
-  \newline
-  \newline
+
   \begin{minipage}[c]{0.49\linewidth}
     \V{["windows-defender", "tw", 0.8] | image}
   \end{minipage}\hfill
@@ -47,8 +39,7 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Informatique et Machine Learning}
+\begin{frame}{Informatique et Machine Learning}
   Et aussi :
   \begin{itemize}
   \item Visual Studio IntelliCode $\Rightarrow$ Complétion automatique intelligente
