--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{Médecine et machine learning}
+\begin{frame}{Médecine et machine learning}
   3 sous-domaines :
   \begin{itemize}
   \item Diagnostiques
@@ -8,17 +7,15 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Médecine et machine learning}
-  Cabinet Frost & Sullivan :
+\begin{frame}{Médecine et machine learning}
+  Cabinet Frost \& Sullivan :
   \begin{itemize}
     \item \$90 milliards pour le marché de la santé numérique en 2019
     \item \$234,5 milliards d’ici 2023
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Diagnostique}
+\begin{frame}{Diagnostique}
   Des données :
   \begin{itemize}
     \item Images (multispectrales)
@@ -27,10 +24,18 @@
     \item Données phénotypiques
   \end{itemize}
 \end{frame}
-Nouveaux usages : smartphone, bracelets connectés, ...
 
-\begin{frame}
-  \frametitle{Diagnostique}
+\begin{frame}{Diagnostique}
+  Nouveaux usages :
+  \begin{itemize}
+    \item Smartphones
+    \item Bracelets connectés
+    \item …
+  \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Diagnostique}
   Des pathologies :
   \begin{itemize}
     \item du coeur
@@ -42,8 +47,7 @@ Nouveaux usages : smartphone, bracelets connectés, ...
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Diagnostique}
+\begin{frame}{Diagnostique}
   Ophtalmologie, analyse d'image
   \newline
   \newline
@@ -62,8 +66,7 @@ Nouveaux usages : smartphone, bracelets connectés, ...
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Diagnostique}
+\begin{frame}{Diagnostique}
   \begin{itemize}
   \item oncologie
   \item cerveau (IRM par Qynapse)
@@ -76,8 +79,7 @@ Nouveaux usages : smartphone, bracelets connectés, ...
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Diagnostique}
+\begin{frame}{Diagnostique}
   Toutes les pathologies diagnosticables sont potentiellement apprenables
     \begin{itemize}
     \item Cardiologie (échographie, radiographie, IRM, ECG)
@@ -86,8 +88,7 @@ Nouveaux usages : smartphone, bracelets connectés, ...
     \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Diagnostique}
+\begin{frame}{Diagnostique}
   Génomique :
   \newline
   \begin{minipage}[c]{0.49\linewidth}
@@ -102,8 +103,7 @@ Nouveaux usages : smartphone, bracelets connectés, ...
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Thérapie}
+\begin{frame}{Thérapie}
   Exploitation de gros volumes de données (Génomes, publications)
   \newline
   \newline
@@ -116,20 +116,17 @@ Nouveaux usages : smartphone, bracelets connectés, ...
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{Thérapie}
+\begin{frame}{Thérapie}
   Découverte de molécules (ReLeaSe, ...) 
   \V{["molecule-release", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Thérapie}
+\begin{frame}{Thérapie}
   Modélisation de molécules (DeepMind)
   \V{["foldit", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Thérapie}
+\begin{frame}{Thérapie}
   \begin{minipage}[c]{0.49\linewidth}
     Simulation biologiques de l'effet de médicaments (IKTOS, Atomwise, ...)
   \end{minipage}\hfill
@@ -138,8 +135,7 @@ Nouveaux usages : smartphone, bracelets connectés, ...
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Thérapie}
+\begin{frame}{Thérapie}
   Robo-chirurgien Smart Tissue Autonomous Robot (STAR)
   \begin{itemize}
     \item Sutures automatiques en 2014
@@ -148,8 +144,7 @@ Nouveaux usages : smartphone, bracelets connectés, ...
     \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Thérapie}
+\begin{frame}{Thérapie}
   Lunettes pour aveugles (Panda guide, OrCam Technologies)
   \V{["lunettes-pour-aveugle", "tw", 0.8] | image}
 \end{frame}
