--- a/formation.sty
+++ b/formation.sty
@@ -6,6 +6,7 @@
 \usepackage{xparse}
 \usepackage{ifthen}
 \usepackage{amsmath}
+\usepackage[style=french]{csquotes}
 \usepackage{amssymb}
 \usepackage{tabularx}
 \usepackage{booktabs}
