--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -65,8 +65,37 @@
 \end{frame}
 
 \begin{frame}{Génération de texte au niveau humain}
-  OpenAI~: GPT-3 est «~trop~» performant pour la génération de texte.
-  \V{["openai-gpt2-example", "tw", 0.8] | image}
+  OpenAI~: GPT-3 est «~trop~» performant pour la génération de texte.\\
+
+  Prompt : Kim jong Un resigns
+
+  \begin{quote}
+    Génération : Kim jong Un resigns from parliament in North Korea, but does not return to the country after she was sacked last month
+      
+    North Korea's top diplomat, Kim Joo Seok, has resigned from parliament amid calls for him to step down as the country's top diplomat after she was sacked last month, a parliament spokesman said.
+    
+    Kim said he would meet with North Korea's national leadership later on Thursday morning to "explain why I did not resign."
+    
+    North Korea's state news agency claimed the foreign ministry had dismissed Kim as a "foreign agent". Kim was fired by Pyongyang last week after her role in overseeing a meeting with Pyongyang's leader, Kim Jong Un.
+    
+    Kim was dismissed from the Foreign Ministry in late May because of "serious shortcomings of the ministry," an official said on condition of anonymity. He was confirmed to the supreme command of the state's ruling Workers' Party and was placed under house arrest in February.
+    
+    Kim was widely believed to be the source of North Korea's first official announcement to the world in late April that Kim had been dismissed over allegations of leaking sensitive information to the international media.
+    
+    Kim was fired by North Korea last week after he said he had fired an "excellent team" of senior officials after the country's supreme leader announced that he was leaving the country to work as an investment banker.
+    
+    The statement from the foreign ministry said Kim had had a "bad day" for "the DPRK and its friends." It also described Kim as a "political enemy."
+    
+    Kim's office has been criticised for the state news report on a visit Kim had with other North Korea officials to meet his new wife on Monday.
+    
+    The state news agency said that Kim had made the mistake of claiming the foreign ministry was acting like a government-controlled media service rather than an independent media outlet.
+    
+    Korea has said Kim was fired after he tried to cover up a meeting with Kim Jong Un at a meeting of her family.
+    
+    North Korea has warned against any moves that might destabilise the region. The United States says its military strikes against its Korean neighbours have caused tens of thousands of civilian casualties.
+    
+    North Korea's foreign ministry had earlier said it was "shocked and saddened" by the news, while a North Korean embassy spokesman said it was not yet aware of any incidents that had taken place.
+  \end{quote}
 \end{frame}
 
 \begin{frame}{Les problèmes éthiques}
