--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -65,12 +65,11 @@
 \end{frame}
 
 \begin{frame}{Génération de texte au niveau humain}
-  OpenAI~: GPT-3 est «~trop~» performant pour la génération de texte.\\
+  GPT-3 d'OpenAI est «~trop~» performant pour la génération de texte.
 
-  Prompt : Kim jong Un resigns
-
+  Prompt~: Kim jong Un resigns
   \begin{quote}
-    Génération : Kim jong Un resigns from parliament in North Korea, but does not return to the country after she was sacked last month
+    Kim jong Un resigns from parliament in North Korea, but does not return to the country after she was sacked last month
       
     North Korea's top diplomat, Kim Joo Seok, has resigned from parliament amid calls for him to step down as the country's top diplomat after she was sacked last month, a parliament spokesman said.
     
