Use new vanishing gradients tikz, fix slides
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/dpl/j1/latex/about/description.tex
+++ b/orsys/dpl/j1/latex/about/description.tex
@@ -4,7 +4,7 @@
 \end{frame}
 
 \begin{frame}{Description}
-  \imgtw[0.9]{deep-meme}
+  \V{["deep-meme", "tw"] | image}
 \end{frame}
 
 \begin{frame}{Prérequis}
