--- a/shared/latex/neural-networks/deep-optimize.tex
+++ b/shared/latex/neural-networks/deep-optimize.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Disparition du gradient (ou son explosion)}
-  \V{["vanishing-gradient3", "tw", 1.0] | image}
+  \V{["optimization/vanishing-gradients", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Disparition des gradients}
