--- a/shared/latex/neural-networks/lstm.tex
+++ b/shared/latex/neural-networks/lstm.tex
@@ -8,7 +8,7 @@
 \end{frame}
 
 \begin{frame}{Vanishing gradient résolu (ou presque)}
-  \V{["vanishing-gradient-lstm", "tw", 1] | image}
+  \V{["optimization/vanishing-gradients-lstm", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Détails théoriques}
