--- a/shared/latex/neural-networks/rnn.tex
+++ b/shared/latex/neural-networks/rnn.tex
@@ -43,5 +43,5 @@
 \end{frame}
 
 \begin{frame}{Problème du gradient qui disparaît (vanishing gradient)}
-  \V{["vanishing-gradient-rnn", "tw", 1] | image}
+  \V{["optimization/vanishing-gradients-rnn", "tw", 0.7] | image}
 \end{frame}
