--- a/shared/latex/intelligence-artificielle/historique.tex
+++ b/shared/latex/intelligence-artificielle/historique.tex
@@ -44,7 +44,7 @@
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1995} : Machine à vecteurs support de Vapnik (\textbf{SVM})
-  \V{["svm-schema", "th", 0.6] | image}
+  \V{["svm-schema-nzmog", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
