--- a/shared/latex/machine-learning/data-preparation.tex
+++ b/shared/latex/machine-learning/data-preparation.tex
@@ -187,15 +187,15 @@
 \end{frame}
 
 \begin{frame}{Outils — count plot}
-  \V{["countplot", "tw", 1] | image}
+  \V{["countplot-nzmog", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — dist plot}
-  \V{["distplot", "tw", 1] | image}
+  \V{["distplot-nzmog", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — qq plot}
-  \V{["qqplot", "tw", 1] | image}
+  \V{["qqplot-nzmog", "tw", 1] | image}
   Attention, pas \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}
   mais
   \bluelink{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
@@ -204,23 +204,23 @@
 \end{frame}
 
 \begin{frame}{Outils — bar plot}
-  \V{["barplot", "tw", 1] | image}
+  \V{["barplot-nzmog", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — scatter plot}
-  \V{["scatter", "tw", 0.7] | image}
+  \V{["scatter-nzmog", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Outils — violin plot}
-  \V{["violinplot", "tw", 1] | image}
+  \V{["violinplot-nzmog", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — pair plot}
-  \V{["pairplot", "tw", 0.65] | image}
+  \V{["pairplot-nzmog", "tw", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Outils — correlation matrix}
-  \V{["corrmat", "tw", 0.8] | image}
+  \V{["corrmat-nzmog", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Mode opératoire}
