--- a/shared/latex/machine-learning/evaluation.tex
+++ b/shared/latex/machine-learning/evaluation.tex
@@ -27,5 +27,5 @@
 
 \begin{frame}
   \frametitle{Matrice de confusion}
-  \V{["confusion-matrix", "tw", 0.6] | image}
+  \V{["confusion-matrix-nzmog", "tw", 0.6] | image}
 \end{frame}
