--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -53,7 +53,7 @@
 \begin{frame}{Exemple --- Régression linéaire}
   Prédire une valeur en fonction d'une autre
 
-  \V{["regression-line-1", "th", 0.7] | image}
+  \V{["regression-nzmog", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire multiple}
