--- a/shared/latex/neural-networks/intro.tex
+++ b/shared/latex/neural-networks/intro.tex
@@ -3,11 +3,11 @@
 \end{frame}
 
 \begin{frame}{Lien avec la régression linéaire}
-  \V{["separable-problem-linear-solution", "tw", 0.9] | image}
+  \V{["separable-problem-linear-solution-nzmog", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Lien avec la régression linéaire}
-  \V{["xor", "tw", 0.9] | image}
+  \V{["xor-nzmog", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Lien (ténu) avec la biologie}
