--- a/shared/latex/neural-networks/regularisation.tex
+++ b/shared/latex/neural-networks/regularisation.tex
@@ -14,7 +14,7 @@
 \end{frame}
 
 \begin{frame}{Par early stopping}
-  \V{["early-stopping", "tw", 0.6] | image}
+  \V{["early-stopping-nzmog", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Par augmentation/bruitage des données}
