--- a/shared/latex/supervised/regression-lineaire.tex
+++ b/shared/latex/supervised/regression-lineaire.tex
@@ -9,5 +9,5 @@
 
 \begin{frame}
   \frametitle{Visualisation}
-  \V{["regression-line-1", "th", 0.9] | image}
+  \V{["regression-nzmog", "th", 0.9] | image}
 \end{frame}
