--- a/shared/latex/supervised/svm.tex
+++ b/shared/latex/supervised/svm.tex
@@ -1,26 +1,26 @@
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \V{["separable-problem-linear", "tw", 0.8] | image}
+  \V{["separable-problem-linear-nzmog", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \V{["separable-problem-linear-solution", "tw", 0.8] | image}
+  \V{["separable-problem-linear-solution-nzmog", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \V{["separable-problem-linear-solution-bad", "tw", 0.8] | image}
+  \V{["separable-problem-linear-solution-bad-nzmog", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \V{["separable-problem-linear-svm", "tw", 0.8] | image}
+  \V{["svm-schema-nzmog", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \V{["svm-schema", "tw", 0.9] | image}
+  \V{["svm-schema-nzmog", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
