--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -27,7 +27,7 @@
 
 \begin{frame}{Infrastructure}
   L'utilisation de GPU/TPU coûte cher… et ça ne s'arrange pas avec l'explosion du besoin par le minage de cryptomonnaies
-  \V{["nvidia-stock-history", "th", 0.45] | image}
+  \V{["nvidia-stock-history-nzmog", "th", 0.45] | image}
   \begin{center}
     \small Cours de l'action NVIDIA
   \end{center}
