--- a/shared/latex/engineering/engineering-practices.tex
+++ b/shared/latex/engineering/engineering-practices.tex
@@ -3,7 +3,7 @@
 \end{frame}
 
 \begin{frame}{Complexification des solutions : retours dégressifs}
-  \V{["ml-effort-vs-value", "tw", 0.8] | image}
+  \V{["ml-effort-vs-value-nzmog", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Caractéristiques et buts différents}
