--- a/shared/latex/machine-learning/apprentissage.tex
+++ b/shared/latex/machine-learning/apprentissage.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Qualité de l'apprentissage}
   Entrainement supervisé d'un modèle — overfit
-  \V{["fit", "tw", 1] | image}
+  \V{["fit-nzmog", "tw", 1] | image}
   \red{Problème : trop minimiser la perte n'est pas bon !}
 \end{frame}
 
 \begin{frame}
   \frametitle{Qualité de l'apprentissage}
-  \V{["learning-curve", "tw", 0.6] | image}
+  \V{["learning-curve-nzmog", "tw", 0.6] | image}
   → Minimiser la perte sur un ensemble de validation
 \end{frame}
 
