--- a/shared/latex/supervised/cost-error-function.tex
+++ b/shared/latex/supervised/cost-error-function.tex
@@ -21,7 +21,7 @@
   \begin{minipage}[l]{0.49\linewidth}
   \begin{center}
     $y = a.x+b$
-    \V{["regression-line-1", "tw", 0.6] | image}
+    \V{["regression-nzmog", "tw", 0.6] | image}
   \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
