--- a/shared/latex/supervised/regression-polynomiale.tex
+++ b/shared/latex/supervised/regression-polynomiale.tex
@@ -2,8 +2,8 @@
 \begin{frame}
   \frametitle{Regression Polynomiale}
   Limites de la regression linéaire
-  \V{["residuals-2", "tw", 1] | image}
-  \V{["residuals-1", "th", 0.4] | image}
+  \V{["residuals-2-nzmog", "tw", 1] | image}
+  \V{["residuals-1-nzmog", "th", 0.4] | image}
 \end{frame}
 
 \begin{frame}
@@ -11,7 +11,7 @@
   $Y=a_0+a_1*X+a_2*X^2+a_3*X^3+...+a_n*X^n$ \\
   \newline
   $Y=\underset{k \in [0..n]}{\sum}{a_k*X^k}$
-  \V{["regression-polynomiale-exemple", "th", 0.6] | image}
+  \V{["regression-polynomiale-exemple-nzmog", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
