Adjust sizes and replace learning curve image to increase font
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -53,7 +53,7 @@
 \begin{frame}{Exemple --- Régression linéaire}
   Prédire une valeur en fonction d'une autre
 
-  \V{["regression-nzmog", "th", 0.7] | image}
+  \V{["regression-nzmog", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire multiple}
@@ -63,7 +63,7 @@
 \end{frame}
 
 \begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
-  \V{"cnn-schema" | image}
+  \V{["cnn-schema", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
