Implement the known sources changes
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/machine-learning/evaluation.tex
+++ b/shared/latex/machine-learning/evaluation.tex
@@ -17,15 +17,15 @@
 
 \begin{frame}
   \frametitle{Précision, rappel}
-  \V{["precisionrecall", "th", 0.8] | image}
+  \V{["precisionrecall", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Analyse d'une courbe ROC}
-  \V{["roc-space", "tw", 0.6] | image}
+  \V{["roc-space", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Matrice de confusion}
-  \V{["confusion-matrix-nzmog", "tw", 0.6] | image}
+  \V{["confusion-matrix-nzmog", "th", 0.7] | image}
 \end{frame}
