--- a/shared/latex/supervised/classification.tex
+++ b/shared/latex/supervised/classification.tex
@@ -5,12 +5,12 @@
 
 \begin{frame}
   \frametitle{Classification}
-  \V{["mnist", "tw", 0.65] | image}
+  \V{["mnist", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Classification}
-  \V{["caltech256", "tw", 0.8] | image}
+  \V{["caltech256", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}
