--- a/shared/latex/unsupervised/pca-lda.tex
+++ b/shared/latex/unsupervised/pca-lda.tex
@@ -16,11 +16,11 @@
 \end{frame}
 
 \begin{frame}{PCA --- Exemple 1}
-  \V{["pca-nuage", "th", 0.9] | image}
+  \V{["pca-nuage", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{PCA --- Exemple 2}
-  \V{["pca-fish", "tw", 0.9] | image}
+  \V{["pca-fish", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{PCA --- Point de départ}
