update shared/latex/image-instruction.lst;check sparks-formation/ml-python-3j;troll

--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -14,13 +14,13 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Caméras de vidéo-surveillance}
-  Le fil céleste :
+\begin{frame}{Le fil céleste : Caméras de vidéo-surveillance}
   \begin{minipage}[c]{0.49\linewidth}
-    Des caméras dans l'espace public :
+    Dans l'espace public :
     \begin{itemize}
+      \item $\approx$800 Millions dans le monde
       \item 400 Millions début 2020 
-      \item 600 Millions fin 2020 ($\approx$800 Millions dans le monde)
+      \item 600 Millions fin 2020 
       \item Objectif 2,7 Milliards en 2022
       \item 3 Millions à Shangaï
       \end{itemize}
@@ -28,13 +28,15 @@
   \begin{minipage}[c]{0.49\linewidth}
     Des caméras pointues :
     \begin{itemize}
-      \item 500Mega pixels
+      \item jusqu'à 500Mega pixels
       \item Reconnaissance faciale
       \item Reconnaissance des véhicules
       \item ...
     \end{itemize}
-  \end{minipage}\hfill
-  Toute information ~captable/prédictable~ est utilisée
+  \end{minipage}\hfill\\
+  \\
+  \newline
+  Toute information captable/prédictable est utilisée
 \end{frame}
 
 \begin{frame}{Reconnaissance faciale}
@@ -65,7 +67,7 @@
 \end{frame}
 
 \begin{frame}{Génération de texte au niveau humain}
-  GPT-3 d'OpenAI est «~trop~» performant pour la génération de texte.
+  2019 : GPT-2 d'OpenAI est «~trop~» performant pour la génération de texte.
 
   Prompt~: Kim jong Un resigns
   \begin{quote}
@@ -75,25 +77,9 @@
     
     Kim said he would meet with North Korea's national leadership later on Thursday morning to "explain why I did not resign."
     
-    North Korea's state news agency claimed the foreign ministry had dismissed Kim as a "foreign agent". Kim was fired by Pyongyang last week after her role in overseeing a meeting with Pyongyang's leader, Kim Jong Un.
+    North Korea's state news agency claimed the foreign ministry had dismissed Kim as a "foreign agent". Kim was fired by Pyongyang last week after her role in overseeing a meeting with Pyongyang's leader, Kim Jong Un. 
     
-    Kim was dismissed from the Foreign Ministry in late May because of "serious shortcomings of the ministry," an official said on condition of anonymity. He was confirmed to the supreme command of the state's ruling Workers' Party and was placed under house arrest in February.
-    
-    Kim was widely believed to be the source of North Korea's first official announcement to the world in late April that Kim had been dismissed over allegations of leaking sensitive information to the international media.
-    
-    Kim was fired by North Korea last week after he said he had fired an "excellent team" of senior officials after the country's supreme leader announced that he was leaving the country to work as an investment banker.
-    
-    The statement from the foreign ministry said Kim had had a "bad day" for "the DPRK and its friends." It also described Kim as a "political enemy."
-    
-    Kim's office has been criticised for the state news report on a visit Kim had with other North Korea officials to meet his new wife on Monday.
-    
-    The state news agency said that Kim had made the mistake of claiming the foreign ministry was acting like a government-controlled media service rather than an independent media outlet.
-    
-    Korea has said Kim was fired after he tried to cover up a meeting with Kim Jong Un at a meeting of her family.
-    
-    North Korea has warned against any moves that might destabilise the region. The United States says its military strikes against its Korean neighbours have caused tens of thousands of civilian casualties.
-    
-    North Korea's foreign ministry had earlier said it was "shocked and saddened" by the news, while a North Korean embassy spokesman said it was not yet aware of any incidents that had taken place.
+    [...]
   \end{quote}
 \end{frame}
 
