--- a/shared/latex/machine-learning/apprentissage.tex
+++ b/shared/latex/machine-learning/apprentissage.tex
@@ -10,7 +10,7 @@
 \begin{frame}
   \frametitle{Qualité de l'apprentissage}
 
-  \V{["learning/fit-complexity", "tw", 0.9] | image}
+  \V{["learning-curve-nzmog", "th", 0.6] | image}
 
   → Minimiser la perte sur un ensemble de validation
 \end{frame}
