--- a/shared/latex/neural-networks/regularisation.tex
+++ b/shared/latex/neural-networks/regularisation.tex
@@ -14,11 +14,11 @@
 \end{frame}
 
 \begin{frame}{Par early stopping}
-  \V{["early-stopping-nzmog", "tw", 0.6] | image}
+  \V{["early-stopping-nzmog", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Par augmentation/bruitage des données}
-  \V{["data-augmentation", "tw", 0.8] | image}
+  \V{["data-augmentation-nzmog", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Par dropout}
