--- a/shared/latex/supervised/trees.tex
+++ b/shared/latex/supervised/trees.tex
@@ -159,7 +159,7 @@
           edge label={node[midway,right,font=\scriptsize]{$\neg$ jardinage}}
             [{$\hat{y}=19,25$} [{$L=31,5$}]]]
         ]
-      \end{forest}
+      \end{forest}\\
       Loss totale : $122,3$
     \end{column}
   \end{columns}
@@ -197,7 +197,7 @@
           edge label={node[midway,right,font=\scriptsize]{$\neg$ jeux vidéos}}
             [{$\hat{y}=64,3$} [{$L=30,7$}]]]
         ]
-      \end{forest}
+      \end{forest}\\
       Loss totale : $123,3$
     \end{column}
   \end{columns}
@@ -235,7 +235,7 @@
           edge label={node[midway,right,font=\scriptsize]{$\neg$ chapeaux}}
             [{$\hat{y}=37,25$} [{$L=91$}]]]
         ]
-      \end{forest}
+      \end{forest}\\
       Loss totale : $201,8$
     \end{column}
   \end{columns}
@@ -300,7 +300,7 @@
           [{1, 2, 3, 5},
           edge label={node[midway,right,font=\scriptsize]{$\neg$ jardinage}}]
         ]
-      \end{forest}
+      \end{forest}\\
       \onslide<+->{À vous de jouer !}
     \end{column}
   \end{columns}
