--- a/shared/latex/supervised/regression-polynomiale.tex
+++ b/shared/latex/supervised/regression-polynomiale.tex
@@ -2,16 +2,23 @@
 \begin{frame}
   \frametitle{Regression Polynomiale}
   Limites de la regression linéaire
+  \V{["residuals-1-nzmog", "tw", 1] | image}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Regression Polynomiale}
+  Limites de la regression linéaire
   \V{["residuals-2-nzmog", "tw", 1] | image}
-  \V{["residuals-1-nzmog", "th", 0.4] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Régression Polynomiale}
-  $Y=a_0+a_1*X+a_2*X^2+a_3*X^3+...+a_n*X^n$ \\
-  \newline
-  $Y=\underset{k \in [0..n]}{\sum}{a_k*X^k}$
-  \V{["regression-polynomiale-exemple-nzmog", "th", 0.5] | image}
+  \begin{minipage}[l]{0.25\linewidth}
+    $Y=\underset{k \in [0..n]}{\sum}{a_k*X^k}$
+  \end{minipage}\hfill
+  \begin{minipage}[c]{0.74\linewidth}
+    \V{["regression-polynomiale-exemple-nzmog", "tw", 0.8] | image}
+  \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}
