update shared/latex/image-instruction.lst;check sparks-formation/ml-python-3j

--- a/shared/latex/neural-networks/intro.tex
+++ b/shared/latex/neural-networks/intro.tex
@@ -51,7 +51,7 @@
 
 \begin{frame}{Un potentiel infini}
   \textbf{Kurt Hornik, 1991~:} Théorème d'approximation universelle
-  \V{["universal-approximation", "tw", 0.8] | image}
+  \V{["activations/approximation", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Démonstration}
